# modbus

./: CMakeLists.txt
include/modbus/: client.hpp  error.hpp  functions.hpp  request.hpp  response.hpp  server.hpp  tcp.hpp
include/modbus/impl/: deserialize_base.hpp  serialize_base.hpp  serialize_request.hpp  serialize_response.hpp
src/: client.cpp  error.cpp  server.cpp  test.cpp
src/impl/: deserialize_base.hpp  deserialize_request.hpp  deserialize_response.hpp  deserialize_tcp.hpp  serialize_tcp.hpp
test/: test.cpp
